# SDL-Game

./: .gitignore  .gitmodules  CMakeLists.txt  FontCacheCMakeLists.patch  GameWindow.c  GameWindow.h  LButton.c  LButton.h  LCamera.c  LTexture.c  LTexture.h  LTimer.c  LTimer.h  Player.c  Player.h  README.md  TileMap.c  TileMap.h  main.c  main.h  physics.c  physics.h
LevelObjects/: LCamera.c  LCamera.h  Level.c  Level.h  Player.c  Player.h  TileMap.c  TileMap.h  physics.h
Levels/: default-level.tm  level-1.tm
MenuObjects/: Inventory.c  Inventory.h  LButton.c  LButton.h  LMenu.c  LMenu.h
resources/: FatRun.xcf
